[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "murray-bifurcation-visualization"
version = "0.1.0"
description = "Interactive 3D visualization of Murray's Law compliance at vascular bifurcations"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Johns Hopkins University"}
]
keywords = ["visualization", "biomedical", "vascular", "Murray's Law", "bifurcation", "3D", "pyvista"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.20.0,<3.0.0",
    "scipy>=1.7.0,<2.0.0",
    "pyvista>=0.40.0,<1.0.0",
    "vtk>=9.0.0,<10.0.0",
    "scikit-image>=0.19.0,<1.0.0",
    "h5py>=3.0.0,<4.0.0",
    "PyQt5>=5.15.0,<6.0.0",
    "PyOpenGL>=3.1.0,<4.0.0",
]

[project.optional-dependencies]
analysis = [
    "scikit-learn>=1.0.0,<2.0.0",
    "pandas>=1.3.0,<3.0.0",
    "matplotlib>=3.5.0,<4.0.0",
    "torch>=1.10.0,<3.0.0",
]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.950",
]

[project.urls]
Homepage = "https://github.com/yourusername/murray-bifurcation-visualization"
Documentation = "https://github.com/yourusername/murray-bifurcation-visualization/tree/main/docs"
Repository = "https://github.com/yourusername/murray-bifurcation-visualization"
Issues = "https://github.com/yourusername/murray-bifurcation-visualization/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
murray_viz = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
